--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -9,14 +9,31 @@ legendary-tungsten-cube=All the people here who crafted this wireless tungsten c
 [equipment-name]
 tungsten-cube=Tungsten Cube
 
+[item-group-name]
+cubes-group=Group of the Cubes
+
 [item-name]
 tungsten-cube=Tungsten Cube
+solid-fuel=Hydrocarbon Cube
+
+biter-egg-cube=Biter Egg Cube
+carbon-cube=Carbon Cube
+copper-cube=Copper Cube
+holmium-cube=Holmium Cube
+iron-cube=Iron Cube
+u-235-cube=Uranium Cube
 
 [item-description]
 tungsten-cube=According to mortals the cube is around 52 liters in size, but for the reformed engineer it takes up the entire world!
 
 [recipe-name]
 tungsten-cube-recipe=Assembeling of The Tungsten Cube
+biter-egg-cube-recipe=Stiching of The Biter Egg Cube
+carbon-cube-recipe=Pressing of The Carbon Cube
+copper-cube-recipe=Rivoting The Copper Cube
+holmium-cube-recipe=Assembeling of The Holmium Cube
+iron-cube-recipe=Welding of The Iron Cube
+u-235-cube-recipe=I-hope-this-doesn't-blow-up Cube
 
 [technology-name]
 cube-unlock=Age of The Cube
