--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -36,7 +36,17 @@ iron-cube-recipe=Welding of The Iron Cube
 u-235-cube-recipe=I-hope-this-doesn't-blow-up Cube
 
 [technology-name]
-cube-unlock=Age of The Cube
+tungsten-cube-unlock=Age of The Tungsten Cube
+biter-egg-cube-unlock=Biter Cubification
+carbon-cube-unlock=Diamond Manufactoring (Hopefully)
+iron-and-copper-cube-unlock=Cube Technology
+holmium-cube-unlock=Holmium Cubing
+u-235-cube-unlock=I have an idea, hopefully it will work
 
 [technology-description]
-cube-unlock=Learn of the cube.
+tungsten-cube-unlock=Learn of the cube.
+biter-egg-cube-unlock=With how population dense this cube is you would think you are holding Manhattan in your hands.
+carbon-cube-unlock=So if we just squeese some carbon together hopefully we will get a diamond that we can like sell to someone I guess.
+iron-and-copper-cube-unlock=What if we put the materials into these cool shapes, we could then call them cubes.
+holmium-cube-unlock=We found an artifact on Fulgora, it cube but not of tungsten. It seems the Fulgorans had to settle for holmium a much less affordable metal.
+u-235-cube-unlock=So we basicly just press this uranium stuff together and hopefully it will turn into a cube shape. Let's just not drop it.
