--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -24,7 +24,13 @@ iron-cube=Iron Cube
 u-235-cube=Uranium Cube
 
 [item-description]
-tungsten-cube=According to mortals the cube is around 52 liters in size, but for the reformed engineer it takes up the entire world!
+tungsten-cube=According to a mortal from the icy wastes of the north, the cube is around 52 liters in size, but for the engineer who has held the cube and knows of its truth, it takes up the entire world!
+biter-egg-cube=So if each egg makes one biter then you are holding 500 biters, that is bigger than the population of Rattenburg.
+carbon-cube=This goes fast!
+copper-cube=We have yet think of a purpose for this cube, if you have an idea text "IDEA" to 0118 999 881 999 119 725 3
+holmium-cube=Made of a lesser metal, this cube is worshiped by Fulgorans, due to this they do not know the true power of the cube and they also don't write as many comma splices.
+iron-cube=This cube can (and should) be shot out of a cannon into enemies.
+u-235-cube=Someone suggested we throw this cube, luckly we have yet learned how to throw it so we are safe for now.
 
 [recipe-name]
 tungsten-cube-recipe=Assembeling of The Tungsten Cube
