--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -22,6 +22,8 @@ copper-cube=Copper Cube
 holmium-cube=Holmium Cube
 iron-cube=Iron Cube
 u-235-cube=Uranium Cube
+plastic-cube=Plastic Cube
+science-cube=Science Cube (Placeholder Image)
 
 [item-description]
 tungsten-cube=According to a mortal from the icy wastes of the north, the cube is around 52 liters in size, but for the engineer who has held the cube and knows of its truth, it takes up the entire world!
@@ -31,6 +33,8 @@ copper-cube=We have yet think of a purpose for this cube, if you have an idea te
 holmium-cube=Made of a lesser metal, this cube is worshiped by Fulgorans, due to this they do not know the true power of the cube and they also don't write as many comma splices.
 iron-cube=This cube can (and should) be shot out of a cannon into enemies.
 u-235-cube=Someone suggested we throw this cube, luckly we have yet learned how to throw it so we are safe for now.
+plastic-cube=Apparently this cube is part of a set seven objects, however those other objects are not cubes and therefore will not be made.
+science-cube=We can apparently look at this cube enough to learn more about cubes, no idea how that works but it does work.
 
 [recipe-name]
 tungsten-cube-recipe=Assembeling of The Tungsten Cube
@@ -40,6 +44,8 @@ copper-cube-recipe=Rivoting The Copper Cube
 holmium-cube-recipe=Assembeling of The Holmium Cube
 iron-cube-recipe=Welding of The Iron Cube
 u-235-cube-recipe=I-hope-this-doesn't-blow-up Cube
+plastic-cube-recipe=Molding of The Plastic Cube
+science-cube-recipe=Experimenting with The Science Cube
 
 [technology-name]
 tungsten-cube-unlock=Age of The Tungsten Cube
@@ -48,6 +54,8 @@ carbon-cube-unlock=Diamond Manufactoring (Hopefully)
 iron-and-copper-cube-unlock=Cube Technology
 holmium-cube-unlock=Holmium Cubing
 u-235-cube-unlock=I have an idea, hopefully it will work
+plastic-cube-unlock=Souvenir Creation
+cube-productivity=Cube Discount
 
 [technology-description]
 tungsten-cube-unlock=Learn of the cube.
@@ -56,3 +64,5 @@ carbon-cube-unlock=So if we just squeese some carbon together hopefully we will 
 iron-and-copper-cube-unlock=What if we put the materials into these cool shapes, we could then call them cubes.
 holmium-cube-unlock=We found an artifact on Fulgora, it cube but not of tungsten. It seems the Fulgorans had to settle for holmium a much less affordable metal.
 u-235-cube-unlock=So we basicly just press this uranium stuff together and hopefully it will turn into a cube shape. Let's just not drop it.
+plastic-cube-unlock=We can use this cool plastic stuff to make a cube and someone says we should give this cube the nickname of "dice" but that is insane!
+cube-productivity=Get more cubes per cube! How this works we don't know but we are always happy to have more cubes.
