--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -1,10 +1,14 @@
 [achievement-name]
 common-tungsten-cube=Dawn of The Cube
 legendary-tungsten-cube=Cube Apocalypse
+all-the-cubes=Library of Cube
+artillery-cube-achievement=Cubes from God
 
 [achievement-description]
 common-tungsten-cube=PRAISE BE THE CUBE! PRAISE BE THE CUBE!
 legendary-tungsten-cube=All the people here who crafted this wireless tungsten cube to admire its surreal heft have precisely the wrong mindset. I, in my exalted wisdom and unbridled ambition, crafted this cube to become fully accustomed to the intensity of its density, to make its weight bearable and in fact normal to me, so that all the world around me may fade into a fluffy arena of gravitational inconsequence. And it has worked, to profound success. I have carried the tungsten with me, have grown attached to the downward pull of its small form, its desire to be one with the floor. This force has become so normal to me that lifting any other object now feels like lifting cotton candy, or a fluffy pillow. Big burly manly men who pump iron now seem to me as little children who raise mere iron plates. \nI can hardly remember the days before I became an engineer of tungsten. How distant those days seem now, how burdened by the apparent heaviness of everyday objects. I laugh at the philistines who still operate in a world devoid of tungsten, their shoulders thin and unempowered by the experience of bearing tungsten. Ha, what fools, blissful in their ignorance, anesthetized by their lack of meaningful struggle, devoid of passion. \nNietzsche once said that an engineer who has a why can bear almost any how. But an engineer who has a tungsten cube can bear any object less dense, and all this talk of why and how becomes unnecessary. \nSchopenhauer once said that every engineer takes the limits of their own field of vision for the limits of the world. Tungsten expands the limits of an engineer's field of vision by showing them an example of increased density, in comparison to which the everyday objects to which they were formerly accustomed gain a light and airy quality. Who can lament the tragedy of life, when surrounded by such lightweight objects? Who can cry in a world of styrofoam and cushions? \nHave you yet understood? This is no ordinary metal. In this metal is the alchemical potential to transform your world, by transforming your expectations. Those who have not yet held the cube in their hands and mouths will not understand, for they still live in a world of normal density, like Plato's cave dwellers. Those who have opened their mind to the density of tungsten will shift their expectations of weight and density accordingly. \nTo give this cube a rating of anything less than five stars would be to condemn life itself. Who am I, as a mere mortal, to judge the most compact of all craftable materials? No. I say gratefully to whichever grand being may have created this universe: good job on the tungsten. It sure is dense. \nI sit here with my tungsten cube, transcendent above death itself. For insofar as this tungsten cube will last forever, I am in the presence of immortality.
+all-the-cubes=Make a Tungsten Cube and then research all the cube technologies that currently exist!
+artillery-cube-achievement=Lauch some cubes into space to drop them from the atmosphere onto biters.
 
 [equipment-name]
 tungsten-cube=Tungsten Cube
@@ -37,15 +41,15 @@ plastic-cube=Apparently this cube is part of a set seven objects, however those 
 science-cube=We can apparently look at this cube enough to learn more about cubes, no idea how that works but it does work.
 
 [recipe-name]
-tungsten-cube-recipe=Assembeling of The Tungsten Cube
-biter-egg-cube-recipe=Stiching of The Biter Egg Cube
-carbon-cube-recipe=Pressing of The Carbon Cube
-copper-cube-recipe=Rivoting The Copper Cube
-holmium-cube-recipe=Assembeling of The Holmium Cube
-iron-cube-recipe=Welding of The Iron Cube
-u-235-cube-recipe=I-hope-this-doesn't-blow-up Cube
-plastic-cube-recipe=Molding of The Plastic Cube
-science-cube-recipe=Experimenting with The Science Cube
+tungsten-cube=Assembeling of The Tungsten Cube
+biter-egg-cube=Stiching of The Biter Egg Cube
+carbon-cube=Pressing of The Carbon Cube
+copper-cube=Rivoting The Copper Cube
+holmium-cube=Assembeling of The Holmium Cube
+iron-cube=Welding of The Iron Cube
+u-235-cube=I-hope-this-doesn't-blow-up Cube
+plastic-cube=(Non-Liquid) Molding of The Plastic Cube
+science-cube=Experimenting with The Science Cube
 
 [technology-name]
 tungsten-cube-unlock=Age of The Tungsten Cube
