--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -17,9 +17,10 @@ tungsten-cube=Tungsten Cube
 cubes-group=Group of the Cubes
 
 [item-name]
-tungsten-cube=Tungsten Cube
 solid-fuel=Hydrocarbon Cube
+ice=Ice Cube
 
+tungsten-cube=Tungsten Cube
 biter-egg-cube=Biter Egg Cube
 carbon-cube=Carbon Cube
 copper-cube=Copper Cube
@@ -28,6 +29,9 @@ iron-cube=Iron Cube
 u-235-cube=Uranium Cube
 plastic-cube=Plastic Cube
 science-cube=Science Cube (Placeholder Image)
+spoilage-cube=Spoilage Cube
+wube-cube=Wube Cube
+natalie-cube=Natalie Cube
 
 [item-description]
 tungsten-cube=According to a mortal from the icy wastes of the north, the cube is around 52 liters in size, but for the engineer who has held the cube and knows of its truth, it takes up the entire world!
@@ -39,6 +43,9 @@ iron-cube=This cube can (and should) be shot out of a cannon into enemies.
 u-235-cube=Someone suggested we throw this cube, luckly we have yet learned how to throw it so we are safe for now.
 plastic-cube=Apparently this cube is part of a set seven objects, however those other objects are not cubes and therefore will not be made.
 science-cube=We can apparently look at this cube enough to learn more about cubes, no idea how that works but it does work.
+spoilage-cube=Cube that can burn for a thousand years, why would you want that tough? No idea!
+wube-cube=Incase you need to eat ten thousand fish at once.
+natalie-cube=As you hold this cube you feel feminine love and warmth, wrapped up in bad standup jokes and dyslexia. I hope you have a good day.
 
 [recipe-name]
 tungsten-cube=Assembeling of The Tungsten Cube
@@ -50,6 +57,8 @@ iron-cube=Welding of The Iron Cube
 u-235-cube=I-hope-this-doesn't-blow-up Cube
 plastic-cube=(Non-Liquid) Molding of The Plastic Cube
 science-cube=Experimenting with The Science Cube
+spoilage-cube=Rotting of The Spoilage Cube
+wube-cube=Wubing of The Wube Cube
 
 [technology-name]
 tungsten-cube-unlock=Age of The Tungsten Cube
