--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -20,6 +20,17 @@ cubes-group=Group of the Cubes
 solid-fuel=Hydrocarbon Cube
 ice=Ice Cube
 
+fact-tape-1=Fact Tape 1
+fact-tape-2=Fact Tape 2
+fact-tape-3=Fact Tape 3
+fact-tape-4=Fact Tape 4
+fact-tape-5=Fact Tape 5
+fact-tape-6=Fact Tape 6
+fact-tape-7=Fact Tape 7
+fact-tape-8=Fact Tape 8
+fact-tape-9=Fact Tape 9
+fact-tape-10=Fact Tape 10
+
 tungsten-cube=Tungsten Cube
 biter-egg-cube=Biter Egg Cube
 carbon-cube=Carbon Cube
@@ -34,6 +45,17 @@ wube-cube=Wube Cube
 natalie-cube=Natalie Cube
 
 [item-description]
+fact-tape-1=Hi, you have unlocked the first fun fact about me! The cube recipe to make the Natalie Cube are items picked to represent me. Trains because they are my favourite part of the game and speakers because I am known for making music.
+fact-tape-2=Second Fun Fact (about me): I was born in London but I have grown up in different places around the world! My parents are Austrailan but I wouldn't call myself Austrailan or anything, I am "international".
+fact-tape-3=Third Fact: I have a cute dog named Fritz! He is a little hairy baby!
+fact-tape-4=Fact the Forth: I know English and German fluently. In school I also learned French (I hate French) and Latin.
+fact-tape-5=Factiod Fivetiod: My favourite food is Sphaggetti Bolonese. I also suspect that I might have dyslexia however I can read okay just not spell for the life of me.
+fact-tape-6=Sixth Fun Fact: In my free time I do standup comedy. I am not that good at it, I mostly do it as a creative excersize.
+fact-tape-7=Fun Fact Seven: I don't like writing code, this is one of the things that helped me realise I don't want to work in the video games industry. I was going to study video game design after highschool but now have changed carrer path.
+fact-tape-8=Eigth Fact: My favourite TV series is Basil Brush, it is an awesome series and is entirely on Youtube, it is worth watching at any age and it has largely shaped who I am and what humour I enjoy.
+fact-tape-9=Fun Ninth Fact: I am currently learning Austrian sign language and I want to become a sign language interpreter. The reason I am learning is because I love the language, I want to connect with people, because my mum taught me britsh sign as a kid and I have always wanted to follow in her footsteps.
+fact-tape-10=Fun Fact Ten: It means so much that you researched this tech and that you have installed this mod. Thanks for supporting me and my creativity. I do this for fun but it still means a lot to me.
+
 tungsten-cube=According to a mortal from the icy wastes of the north, the cube is around 52 liters in size, but for the engineer who has held the cube and knows of its truth, it takes up the entire world!
 biter-egg-cube=So if each egg makes one biter then you are holding 500 biters, that is bigger than the population of Rattenburg.
 carbon-cube=This goes fast!
@@ -61,6 +83,18 @@ spoilage-cube=Rotting of The Spoilage Cube
 wube-cube=Wubing of The Wube Cube
 
 [technology-name]
+natalie-fact1-unlock=Fun Fact Unlock
+natalie-fact2-unlock=Fun Fact Unlock
+natalie-fact3-unlock=Fun Fact Unlock
+natalie-fact4-unlock=Fun Fact Unlock
+natalie-fact5-unlock=Fun Fact Unlock
+natalie-fact6-unlock=Fun Fact Unlock
+natalie-fact7-unlock=Fun Fact Unlock
+natalie-fact8-unlock=Fun Fact Unlock
+natalie-fact9-unlock=Fun Fact Unlock
+natalie-fact10-unlock=Fun Fact Unlock
+
+
 tungsten-cube-unlock=Age of The Tungsten Cube
 biter-egg-cube-unlock=Biter Cubification
 carbon-cube-unlock=Diamond Manufactoring (Hopefully)
@@ -79,3 +113,9 @@ holmium-cube-unlock=We found an artifact on Fulgora, it cube but not of tungsten
 u-235-cube-unlock=So we basicly just press this uranium stuff together and hopefully it will turn into a cube shape. Let's just not drop it.
 plastic-cube-unlock=We can use this cool plastic stuff to make a cube and someone says we should give this cube the nickname of "dice" but that is insane!
 cube-productivity=Get more cubes per cube! How this works we don't know but we are always happy to have more cubes.
+
+[mod-setting-name]
+natalie-cube-mode=Enable the 'Natalie Fun Facts' tech tree:
+
+[mod-setting-description]
+natalie-cube-mode=Enable the 'Natalie Fun Facts' tech tree where after each tech you are given a fun fact about me!
