--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -20,16 +20,16 @@ cubes-group=Group of the Cubes
 solid-fuel=Hydrocarbon Cube
 ice=Ice Cube
 
-fact-tape-1=Fact Tape 1
-fact-tape-2=Fact Tape 2
-fact-tape-3=Fact Tape 3
-fact-tape-4=Fact Tape 4
-fact-tape-5=Fact Tape 5
-fact-tape-6=Fact Tape 6
-fact-tape-7=Fact Tape 7
-fact-tape-8=Fact Tape 8
-fact-tape-9=Fact Tape 9
-fact-tape-10=Fact Tape 10
+fact-tape-01=Fact Drive 1
+fact-tape-02=Fact Drive 2
+fact-tape-03=Fact Drive 3
+fact-tape-04=Fact Drive 4
+fact-tape-05=Fact Drive 5
+fact-tape-06=Fact Drive 6
+fact-tape-07=Fact Drive 7
+fact-tape-08=Fact Drive 8
+fact-tape-09=Fact Drive 9
+fact-tape-10=Fact Drive 10
 
 tungsten-cube=Tungsten Cube
 biter-egg-cube=Biter Egg Cube
@@ -39,21 +39,21 @@ holmium-cube=Holmium Cube
 iron-cube=Iron Cube
 u-235-cube=Uranium Cube
 plastic-cube=Plastic Cube
-science-cube=Science Cube (Placeholder Image)
+legacy-science-cube=Science Cube
 spoilage-cube=Spoilage Cube
 wube-cube=Wube Cube
 natalie-cube=Natalie Cube
 
 [item-description]
-fact-tape-1=Hi, you have unlocked the first fun fact about me! The cube recipe to make the Natalie Cube are items picked to represent me. Trains because they are my favourite part of the game and speakers because I am known for making music.
-fact-tape-2=Second Fun Fact (about me): I was born in London but I have grown up in different places around the world! My parents are Austrailan but I wouldn't call myself Austrailan or anything, I am "international".
-fact-tape-3=Third Fact: I have a cute dog named Fritz! He is a little hairy baby!
-fact-tape-4=Fact the Forth: I know English and German fluently. In school I also learned French (I hate French) and Latin.
-fact-tape-5=Factiod Fivetiod: My favourite food is Sphaggetti Bolonese. I also suspect that I might have dyslexia however I can read okay just not spell for the life of me.
-fact-tape-6=Sixth Fun Fact: In my free time I do standup comedy. I am not that good at it, I mostly do it as a creative excersize.
-fact-tape-7=Fun Fact Seven: I don't like writing code, this is one of the things that helped me realise I don't want to work in the video games industry. I was going to study video game design after highschool but now have changed carrer path.
-fact-tape-8=Eigth Fact: My favourite TV series is Basil Brush, it is an awesome series and is entirely on Youtube, it is worth watching at any age and it has largely shaped who I am and what humour I enjoy.
-fact-tape-9=Fun Ninth Fact: I am currently learning Austrian sign language and I want to become a sign language interpreter. The reason I am learning is because I love the language, I want to connect with people, because my mum taught me britsh sign as a kid and I have always wanted to follow in her footsteps.
+fact-tape-01=Hi, you have unlocked the first fun fact about me! The cube recipe to make the Natalie Cube are items picked to represent me. Trains because they are my favourite part of the game and speakers because I am known for making music.
+fact-tape-02=Second Fun Fact (about me): I was born in London but I have grown up in different places around the world! My parents are Austrailan but I wouldn't call myself Austrailan or anything, I am "international".
+fact-tape-03=Third Fact: I have a cute dog named Fritz! He is a little hairy baby!
+fact-tape-04=Fact the Forth: I know English and German fluently. In school I also learned French (I hate French) and Latin.
+fact-tape-05=Factiod Fivetiod: My favourite food is Sphaggetti Bolonese. I also suspect that I might have dyslexia however I can read okay just not spell for the life of me.
+fact-tape-06=Sixth Fun Fact: In my free time I do standup comedy. I am not that good at it, I mostly do it as a creative excersize.
+fact-tape-07=Fun Fact Seven: I don't like writing code, this is one of the things that helped me realise I don't want to work in the video games industry. I was going to study video game design after highschool but now have changed carrer path.
+fact-tape-08=Eigth Fact: My favourite TV series is Basil Brush, it is an awesome series and is entirely on Youtube, it is worth watching at any age and it has largely shaped who I am and what humour I enjoy.
+fact-tape-09=Fun Ninth Fact: I am currently learning Austrian sign language and I want to become a sign language interpreter. The reason I am learning is because I love the language, I want to connect with people, because my mum taught me britsh sign as a kid and I have always wanted to follow in her footsteps.
 fact-tape-10=Fun Fact Ten: It means so much that you researched this tech and that you have installed this mod. Thanks for supporting me and my creativity. I do this for fun but it still means a lot to me.
 
 tungsten-cube=According to a mortal from the icy wastes of the north, the cube is around 52 liters in size, but for the engineer who has held the cube and knows of its truth, it takes up the entire world!
@@ -64,7 +64,7 @@ holmium-cube=Made of a lesser metal, this cube is worshiped by Fulgorans, due to
 iron-cube=This cube can (and should) be shot out of a cannon into enemies.
 u-235-cube=Someone suggested we throw this cube, luckly we have yet learned how to throw it so we are safe for now.
 plastic-cube=Apparently this cube is part of a set seven objects, however those other objects are not cubes and therefore will not be made.
-science-cube=We can apparently look at this cube enough to learn more about cubes, no idea how that works but it does work.
+legacy-science-cube=We can apparently look at this cube enough to learn more about cubes, no idea how that works but it does work.
 spoilage-cube=Cube that can burn for a thousand years, why would you want that tough? No idea!
 wube-cube=Incase you need to eat ten thousand fish at once.
 natalie-cube=As you hold this cube you feel feminine love and warmth, wrapped up in bad standup jokes and dyslexia. I hope you have a good day.
@@ -78,7 +78,7 @@ holmium-cube=Assembeling of The Holmium Cube
 iron-cube=Welding of The Iron Cube
 u-235-cube=I-hope-this-doesn't-blow-up Cube
 plastic-cube=(Non-Liquid) Molding of The Plastic Cube
-science-cube=Experimenting with The Science Cube
+legacy-science-cube=Experimenting with The Science Cube
 spoilage-cube=Rotting of The Spoilage Cube
 wube-cube=Wubing of The Wube Cube
 
@@ -105,6 +105,8 @@ plastic-cube-unlock=Souvenir Creation
 cube-productivity=Cube Discount
 
 [technology-description]
+natalie-fact1-unlock=This tech as well as it's subsequent techs allows you to craft Natalie Cubes in exchange for fun facts about me! If you don't want to play with this it can be toggled in the settings.
+
 tungsten-cube-unlock=Learn of the cube.
 biter-egg-cube-unlock=With how population dense this cube is you would think you are holding Manhattan in your hands.
 carbon-cube-unlock=So if we just squeese some carbon together hopefully we will get a diamond that we can like sell to someone I guess.
@@ -116,6 +118,8 @@ cube-productivity=Get more cubes per cube! How this works we don't know but we a
 
 [mod-setting-name]
 natalie-cube-mode=Enable the 'Natalie Fun Facts' tech tree:
+music-toggle=Enable Tungsten Cube music:
 
 [mod-setting-description]
 natalie-cube-mode=Enable the 'Natalie Fun Facts' tech tree where after each tech you are given a fun fact about me!
+music-toggle=Tailor your music selection based on your tastes, currently music is only available on Nauvis.
