--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -14,7 +14,7 @@ artillery-cube-achievement=Lauch some cubes into space to drop them from the atm
 tungsten-cube=Tungsten Cube
 
 [item-group-name]
-cubes-group=Group of the Cubes
+cubes-group=Group of The Cubes
 
 [item-name]
 solid-fuel=Hydrocarbon Cube
@@ -43,6 +43,11 @@ legacy-science-cube=Science Cube
 spoilage-cube=Spoilage Cube
 wube-cube=Wube Cube
 natalie-cube=Natalie Cube
+stone-cube=Stone Cube
+efficiency-module-cube=Efficiency Cube
+
+empty-science-cube=Empty Science Cube
+red-science-cube=Red Science Cube
 
 [item-description]
 fact-tape-01=Hi, you have unlocked the first fun fact about me! The cube recipe to make the Natalie Cube are items picked to represent me. Trains because they are my favourite part of the game and speakers because I am known for making music.
@@ -68,6 +73,11 @@ legacy-science-cube=We can apparently look at this cube enough to learn more abo
 spoilage-cube=Cube that can burn for a thousand years, why would you want that tough? No idea!
 wube-cube=Incase you need to eat ten thousand fish at once.
 natalie-cube=As you hold this cube you feel feminine love and warmth, wrapped up in bad standup jokes and dyslexia. I hope you have a good day.
+stone-cube=Not a brick yet also not landfill, until we stick it in the ground.
+efficiency-module-cube=This cube used to be called the green circuit but then we found out that it actually makes mashine more effiecent!
+
+empty-science-cube=This cube is different than most as it is hollow. We made it hollow so that you can fill it with science things.
+red-science-cube=Some suggested calling this the "Automation Science Cube", but that makes no sense. We just called it what it is, a red (science) cube.
 
 [recipe-name]
 tungsten-cube=Assembeling of The Tungsten Cube
@@ -81,6 +91,12 @@ plastic-cube=(Non-Liquid) Molding of The Plastic Cube
 legacy-science-cube=Experimenting with The Science Cube
 spoilage-cube=Rotting of The Spoilage Cube
 wube-cube=Wubing of The Wube Cube
+stone-cube=Stoning of The Stone Cube
+batch-stone-cube=Mass Stoning of Stone Cubes
+efficiency-module-cube=Circuiting of The Efficiency Cube
+
+empty-science-cube=Vitrification of The Empty Science Cube
+red-science-cube=Redening of The Red Science Cube
 
 [technology-name]
 natalie-fact1-unlock=Fun Fact Unlock
@@ -100,9 +116,13 @@ biter-egg-cube-unlock=Biter Cubification
 carbon-cube-unlock=Diamond Manufactoring (Hopefully)
 iron-and-copper-cube-unlock=Cube Technology
 holmium-cube-unlock=Holmium Cubing
-u-235-cube-unlock=I have an idea, hopefully it will work
+u-235-cube-unlock=I Have An Idea, Hopefully It Will Work
 plastic-cube-unlock=Souvenir Creation
 cube-productivity=Cube Discount
+stone-cube-unlock=Putting Rocks Together
+empty-science-cube-unlock=Putting Those Rocks Into A Furnace
+red-science-cube-unlock=Making a Cube Version Of That Round Red Science
+chracter-craft-research1=Missing Local Key, Please Report This To Natalie
 
 [technology-description]
 natalie-fact1-unlock=This tech as well as it's subsequent techs allows you to craft Natalie Cubes in exchange for fun facts about me! If you don't want to play with this it can be toggled in the settings.
@@ -115,6 +135,10 @@ holmium-cube-unlock=We found an artifact on Fulgora, it cube but not of tungsten
 u-235-cube-unlock=So we basicly just press this uranium stuff together and hopefully it will turn into a cube shape. Let's just not drop it.
 plastic-cube-unlock=We can use this cool plastic stuff to make a cube and someone says we should give this cube the nickname of "dice" but that is insane!
 cube-productivity=Get more cubes per cube! How this works we don't know but we are always happy to have more cubes.
+stone-cube-unlock=Turns out if we dig up enough rocks then we can shove it all together to make a cube.
+empty-science-cube-unlock=Once we make a stone cube it might be a good idea to try and see if it burns. Maybe it does, maybe it doesn't.
+red-science-cube-unlock=There is the round version of this science but we need a cube version because cubes are always just better.
+chracter-craft-research1=This is an example of the future powers of the Red Science Cube but this is just a trial run. Also we placed it at the wrong point so one of the prerequistes is a green tech.
 
 [mod-setting-name]
 natalie-cube-mode=Enable the 'Natalie Fun Facts' tech tree:
