--- a/locale/en/tungsten-cube.cfg
+++ b/locale/en/tungsten-cube.cfg
@@ -45,6 +45,7 @@ wube-cube=Wube Cube
 natalie-cube=Natalie Cube
 stone-cube=Stone Cube
 efficiency-module-cube=Efficiency Cube
+productivity-module-cube=Productivity Cube
 
 empty-science-cube=Empty Science Cube
 red-science-cube=Red Science Cube
@@ -74,7 +75,8 @@ spoilage-cube=Cube that can burn for a thousand years, why would you want that t
 wube-cube=Incase you need to eat ten thousand fish at once.
 natalie-cube=As you hold this cube you feel feminine love and warmth, wrapped up in bad standup jokes and dyslexia. I hope you have a good day.
 stone-cube=Not a brick yet also not landfill, until we stick it in the ground.
-efficiency-module-cube=This cube used to be called the green circuit but then we found out that it actually makes mashine more effiecent!
+efficiency-module-cube=This cube used to be called the Green Circuit Cube but then we found out that it actually makes mashine more effiecent!
+productivity-module-cube=So turns out red circuits are productive, why are they productive, we have no idea but they are. That is why the Rroductivity Cube is red.
 
 empty-science-cube=This cube is different than most as it is hollow. We made it hollow so that you can fill it with science things.
 red-science-cube=Some suggested calling this the "Automation Science Cube", but that makes no sense. We just called it what it is, a red (science) cube.
@@ -94,6 +96,7 @@ wube-cube=Wubing of The Wube Cube
 stone-cube=Stoning of The Stone Cube
 batch-stone-cube=Mass Stoning of Stone Cubes
 efficiency-module-cube=Circuiting of The Efficiency Cube
+productivity-module-cube=Producing of The Productivity Cube
 
 empty-science-cube=Vitrification of The Empty Science Cube
 red-science-cube=Redening of The Red Science Cube
@@ -125,7 +128,7 @@ red-science-cube-unlock=Making a Cube Version Of That Round Red Science
 chracter-craft-research1=Missing Local Key, Please Report This To Natalie
 
 [technology-description]
-natalie-fact1-unlock=This tech as well as it's subsequent techs allows you to craft Natalie Cubes in exchange for fun facts about me! If you don't want to play with this it can be toggled in the settings.
+natalie-fact1-unlock=NOW FIXED! This tech as well as it's subsequent techs allows you to craft Natalie Cubes in exchange for fun facts about me! If you don't want to play with this it can be toggled in the settings.
 
 tungsten-cube-unlock=Learn of the cube.
 biter-egg-cube-unlock=With how population dense this cube is you would think you are holding Manhattan in your hands.
